syntax = "proto3";

service ImageService {
  rpc GetAlbumCover (ImageRequest) returns (ImageResponse);
}

message ImageRequest {
  string pid = 1;
}

message ImageResponse {
  bytes image_data = 1;
  string content_type = 2;  
  string error_msg = 3;     
}
